--- a/backend/users/docker-compose.yml
+++ b/backend/users/docker-compose.yml
@@ -1,6 +1,9 @@
+version: '3.8'
+
 services:
   users-service:
     build: .
+    container_name: microservice
     ports:
       - "3000:3000"
     depends_on:
@@ -13,20 +16,16 @@ services:
       POSTGRES_DB: usersDB
       DB_PORT: 5432
     volumes:
-      - .:/usr/src/app
-    command: ["sh", "entrypoint.sh"]
+      - .:/app
+    command: ["./entrypoint.sh"]
 
   postgres:
     image: postgres:15
     restart: always
     environment:
-      DATABASE_URL: postgres://postgres:postgres@postgres:5432/usersDB
-      POSTGRES_HOST: postgres
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      
       POSTGRES_DB: usersDB
-      DB_PORT: 5432
     ports:
       - "5432:5432"
     volumes:
