--- a/backend/users/package.json
+++ b/backend/users/package.json
@@ -25,6 +25,8 @@
     "@nestjs/microservices": "^11.0.12",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.5.0",
+    "dotenv": "^16.4.7",
+    "joi": "^17.13.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "users": "file:"
