Update: addition of npm packages to validate classes(mapped-types), validate data(joi) and load enviromental variables(dotenv)

--- a/backend/client-gateaway/package.json
+++ b/backend/client-gateaway/package.json
@@ -23,8 +23,10 @@
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/microservices": "^11.0.12",
     "@nestjs/platform-express": "^11.0.1",
+    "class-validator": "^0.14.1",
     "client-gateaway": "file:",
     "dotenv": "^16.4.7",
     "joi": "^17.13.3",
